@@ -7,9 +7,9 @@ plugins {
 	id 'java'
 	id 'groovy'
 	id 'idea'
-	id 'org.springframework.boot' version '3.4.1'
-	id 'io.spring.dependency-management' version '1.1.7'
-	id 'org.graalvm.buildtools.native' version '0.10.4'
+	alias(libs.plugins.spring.boot)
+	alias(libs.plugins.spring.dependencyManagement)
+	alias(libs.plugins.graal.buildTools)
 	id 'rpa-worker.functional-testing'
 	id 'rpa-worker.enable-preview'
 }
@@ -18,7 +18,7 @@ apply plugin: ReleaseNotesPlugin
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+		languageVersion = JavaLanguageVersion.of(24)
 	}
 }
 
@@ -61,6 +61,15 @@ dependencies {
 	implementation libs.caffeine
 	
 	runtimeOnly libs.springJsonLog
+	
+	if(project.hasProperty("nativePlatform") && project.property("nativePlatform") == "darwin") {
+		runtimeOnly libs.netty.resolver.nativeMacOs
+		runtimeOnly(variantOf(libs.netty.resolver.nativeMacOs) {
+			classifier(project.property("nativeArch") == "amd64"
+							? "osx-x86_64"
+							: "osx-aarch_64")
+		})
+	}
 
 	developmentOnly libs.spring.boot.devtools
 	annotationProcessor libs.spring.boot.configurationProcessor
@@ -111,13 +120,14 @@ graalvmNative {
 				imageName = "${imageName.get()}_${project.properties.nativeArch}"
 			
 			javaLauncher = javaToolchains.launcherFor {
-				languageVersion = JavaLanguageVersion.of(23)
+				languageVersion = JavaLanguageVersion.of(24)
 				vendor = JvmVendorSpec.GRAAL_VM
 			}
 			quickBuild = false
 			buildArgs.add("--initialize-at-build-time=org.slf4j.jul.JDK14LoggerAdapter")
 			buildArgs.add("--initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl")
 			buildArgs.add("--enable-preview")
+			buildArgs.add("--enable-native-access=ALL-UNNAMED")
 		}
 	}
 }
@@ -137,7 +147,7 @@ tasks.register("fixProvisionedToolchainIfNecessary") {
 	onlyIf { ! System.properties['os.name'].contains("Windows") }
 
 	JavaLauncher javaLauncher = javaToolchains.launcherFor {
-		languageVersion = JavaLanguageVersion.of(23)
+		languageVersion = JavaLanguageVersion.of(24)
 		vendor = JvmVendorSpec.GRAAL_VM
 	}.get()
 	
